# fde-abc

./: .pre-commit-config.yaml  README.md  ruff.toml
.github/: fde-config.yml
.github/workflows/: managed-ci.yml
py/: pyproject.toml
py/abc/libs/my-lib/: README.md  pyproject.toml
py/common/libs/lib-a/: README.md  pyproject.toml
py/common/libs/lib-a/src/lib_a/: __init__.py
py/common/libs/lib-b/: README.md  pyproject.toml
